[package]
name = "profligate"
description = "Caesar cipher library with automatic letter-frequency decryption"
repository = "https://github.com/oreganoli/profligate/"
license = "MIT"
version = "0.2.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
